--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ a:hover 	{color:#FFD700;}
 </div></div>
 
 
-<div class="mainbody"><div class="collapse-non-md">
+<div class="mainbody">
 <div style="display:inline-block; padding:2%; width:100%">
 <f1><b>Campus Ambassador</b></f1><br>
 <f2>Deutsche Bank</f2><br>
@@ -122,7 +122,7 @@ Worked with a team of 5 to forecast demand to optimize inventory planning and re
 Review of IT processes and controls over logical and physical access, password management, user account management, audit logging, program change management, system development lifecycle, computer operations etc., governing data integrity, confidentiality and availability<br>
 Exposed to IT, global financial services, data analytics, risk management and various frameworks<br>
 <br><br>
-</div></div>
+</div>
 
 
 <div style="position:fixed; right:1%; bottom:0; padding:0; border:0;">
