--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ Exposed to IT, global financial services, data analytics, risk management and va
 
 
 <div style="position:fixed; right:1%; bottom:0; padding:0; border:0;">
-<p style="font-size:65%">© 2017 Wong Kay Jan</p>
+<p style="font-size:65%">Copyright 2017 Wong Kay Jan</p>
 </div>
 </body>
 </html>
