--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@ a:hover 	{color:#FFD700;}
 .caption	{display:inline-block; position:absolute; top:95%; height:auto; width:auto; max-width:80%; z-index:9999; background-color:rgba(119, 136, 153, 0.7);
 		left:50%; -webkit-transform:translateX(-50%); -ms-transform:translateX(-50%); transform:translateX(-50%);
 		text-align:center; font-size:1.5em; font-weight:bold; color:white; padding:3px 0;}
-.collapse-non-md 	{height:0; display:none;}
-.collapse-non-md.collapsing {display: block;}
-@media (min-width: 1150px) {
-.collapse-non-md {height:auto; display:block;}
+@media (max-width:800px) {
+f1	{font-size:200%; color:#FFD700; line-height:1}
+.imgHoverP:hover span 	{display:none;}
+.imgHoverL:hover span 	{display:none;}
+.caption	{display:none;}
 }
 </style>
 </head>
@@ -69,8 +70,6 @@ a:hover 	{color:#FFD700;}
 <a href="https://kayjan.github.io/contact/">Contact</a>
 </span>
 </div></div>
-
-
 <div class="mainbody">
 <div style="display:inline-block; padding:2%; width:100%">
 <f1><b>Campus Ambassador</b></f1><br>
