--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Applied the knowledge of R extensively to find correlation and visualize data
 <div class="nav">Singapore</font></div></div>
 Operations Management: Inventory Level Optimizing<br>
 Worked with a team of 5 to forecast demand to optimize inventory planning and restocking policy<br>
-Applied the knowledge of R for data discovery, Python for data visualization and ExtendSim for model simulation.<br>
+Applied the knowledge of R for data discovery, Python for data visualization and ExtendSim for model simulation<br>
 <br>
 <i>Hover over thumbnail to enlarge image, click to open in new tab</i>
 <div class="imgHoverP">
