--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@ Applied the knowledge of R for data discovery, Python for data visualization and
 <font style="color:#FFD700; font-weight:bold">Aug 2016 - Present
 <div class="nav">Singapore</font></div></div>
 Review of IT processes and controls over logical and physical access, password management, user account management, audit logging, program change management, system development lifecycle, computer operations etc., governing data integrity, confidentiality and availability<br>
-Exposed to IT, global financial services, data analytics, risk management and various frameworks<br>
+Attended professional training courses in assurance reporting and SAP modules<br>
+Exposed to banking risk management, data analytics, global financial services, private equity, treasury and various frameworks<br>
 <br><br>
 </div>
 
