--- a/index.html
+++ b/index.html
@@ -76,32 +76,19 @@ f1	{font-size:200%; color:#FFD700; line-height:1}
 <a href="https://kayjan.github.io/contact/">Contact</a>
 </span>
 </div></div>
+
+	
 <div class="mainbody">
 <div style="display:inline-block; padding:2%; width:100%">
-<f1><b>Campus Ambassador</b></f1><br>
-<f2>Deutsche Bank</f2><br>
+<f1><b>Management Intern (IT Assurance and Security)</b></f1><br>
+<f2>KPMG</f2><br>
 <div style="display:flex; justify-content:space-between; width:96%;">
-<font style="color:#FFD700; font-weight:bold">Aug 2016 - Present
+<font style="color:#FFD700; font-weight:bold">May 2017 - Jul 2017
 <div class="nav">Singapore</font></div></div>
-Influence and shape Deutsche Bank's on-campus marketing activities and recruitment strategies<br>
+Review of IT processes and controls over logical and physical access, password management, user account management, audit logging, program change management, system development lifecycle, computer operations etc., governing data integrity, confidentiality and availability<br>
+Attended professional training courses in assurance reporting and SAP modules<br>
+Exposed to banking risk management, data analytics, global financial services, private equity, treasury and various frameworks<br>
 <br><br>
-
-<f1><b>Project Leader</b></f1><br>
-<f2>Park Avenue Hotel</f2><br>
-<div style="display:flex; justify-content:space-between; width:96%;">
-<font style="color:#FFD700; font-weight:bold">Sep 2016 - Dec 2016
-<div class="nav">Singapore</font></div></div>
-Engineering Systems Design: Maximising Revenue per Available Time-Based Unit<br>
-Led a group of 4 to determine the ideal hotel rate based on occupancy rate forecast and other variables in order to maximize revenue<br>
-Applied the knowledge of R extensively to find correlation and visualize data
-<br><br>
-<i>Hover over thumbnail to enlarge image, click to open in new tab</i>
-<div class="imgHoverP">
-<img src="https://2.bp.blogspot.com/-iactxVKEnM0/WVT7sEucu3I/AAAAAAAAAzU/pGQ_u9qEhl0f7fryvNcQXa0c3h72DR6yQCLcBGAs/s1600/Term%2B4%2BESD.png" alt="yes" onclick="window.open('https://2.bp.blogspot.com/-iactxVKEnM0/WVT7sEucu3I/AAAAAAAAAzU/pGQ_u9qEhl0f7fryvNcQXa0c3h72DR6yQCLcBGAs/s1600/Term%2B4%2BESD.png', '_blank');" />
-<span><div class="caption">Engineering Systems Design: Maximising Revenue</div>
-<img src="https://2.bp.blogspot.com/-iactxVKEnM0/WVT7sEucu3I/AAAAAAAAAzU/pGQ_u9qEhl0f7fryvNcQXa0c3h72DR6yQCLcBGAs/s1600/Term%2B4%2BESD.png" alt=""></span>
-</div>
-<br><br><br>
 
 <f1><b>Project Member</b></f1><br>
 <f2>YCH Group</f2><br>
@@ -120,14 +107,46 @@ Applied the knowledge of R for data discovery, Python for data visualization and
 </div>
 <br><br><br>
 
-<f1><b>Management Intern (IT Assurance and Security)</b></f1><br>
-<f2>KPMG</f2><br>
+<f1><b>Project Leader</b></f1><br>
+<f2>Park Avenue Hotel</f2><br>
+<div style="display:flex; justify-content:space-between; width:96%;">
+<font style="color:#FFD700; font-weight:bold">Sep 2016 - Dec 2016
+<div class="nav">Singapore</font></div></div>
+Engineering Systems Design: Maximising Revenue per Available Time-Based Unit<br>
+Led a group of 4 to determine the ideal hotel rate based on occupancy rate forecast and other variables in order to maximize revenue<br>
+Applied the knowledge of R extensively to find correlation and visualize data
+<br><br>
+<i>Hover over thumbnail to enlarge image, click to open in new tab</i>
+<div class="imgHoverP">
+<img src="https://2.bp.blogspot.com/-iactxVKEnM0/WVT7sEucu3I/AAAAAAAAAzU/pGQ_u9qEhl0f7fryvNcQXa0c3h72DR6yQCLcBGAs/s1600/Term%2B4%2BESD.png" alt="yes" onclick="window.open('https://2.bp.blogspot.com/-iactxVKEnM0/WVT7sEucu3I/AAAAAAAAAzU/pGQ_u9qEhl0f7fryvNcQXa0c3h72DR6yQCLcBGAs/s1600/Term%2B4%2BESD.png', '_blank');" />
+<span><div class="caption">Engineering Systems Design: Maximising Revenue</div>
+<img src="https://2.bp.blogspot.com/-iactxVKEnM0/WVT7sEucu3I/AAAAAAAAAzU/pGQ_u9qEhl0f7fryvNcQXa0c3h72DR6yQCLcBGAs/s1600/Term%2B4%2BESD.png" alt=""></span>
+</div>
+<br><br><br>
+
+<f1><b>Campus Ambassador</b></f1><br>
+<f2>Deutsche Bank</f2><br>
 <div style="display:flex; justify-content:space-between; width:96%;">
 <font style="color:#FFD700; font-weight:bold">Aug 2016 - Present
 <div class="nav">Singapore</font></div></div>
-Review of IT processes and controls over logical and physical access, password management, user account management, audit logging, program change management, system development lifecycle, computer operations etc., governing data integrity, confidentiality and availability<br>
-Attended professional training courses in assurance reporting and SAP modules<br>
-Exposed to banking risk management, data analytics, global financial services, private equity, treasury and various frameworks<br>
+Assist in building networks within campus and with the employer brand and recruitment team at Deutsche Bank<br>
+Influence and shape Deutsche Bank's on-campus marketing activities and recruitment strategies<br>
+<br><br>
+
+<f1><b>Daycare Tutor</b></f1><br>
+<f2>Dajin Daycare</f2><br>
+<div style="display:flex; justify-content:space-between; width:96%;">
+<font style="color:#FFD700; font-weight:bold">Dec 2014 - Apr 2015
+<div class="nav">Singapore</font></div></div>
+Nurtured primary school children, up to a class of 20 students, and taught the students English, Mathematics, Science and Mother Tongue (Mandarin) with 100% passing rate<br>
+Tutored the weaker students personally after daycare working hours to help the students understand the main concepts and catch up with the rest of the class<br>
+<br><br>
+
+<f1><b>Private Tutor</b></f1><br>
+<div style="display:flex; justify-content:space-between; width:96%;">
+<font style="color:#FFD700; font-weight:bold">Dec 2014 - Oct 2015
+<div class="nav">Singapore</font></div></div>
+Provide one-to-one private tuition for Junior College Mathematics and Primary School English, Mathematics and Science<br>
 <br><br>
 </div>
 
