--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ f1	{font-size:200%; color:#FFD700; line-height:1}
 <div class="nav">Singapore</font></div></div>
 Review of IT processes and controls over logical and physical access, password management, user account management, audit logging, program change management, system development lifecycle, computer operations etc., governing data integrity, confidentiality and availability<br>
 Attended professional training courses in assurance reporting and SAP modules<br>
-Exposed to banking risk management, data analytics, global financial services, private equity, treasury and various frameworks<br>
+Exposed to banking risk management, data analytics, global financial services, prime brokerage, private equity, securitization, treasury and various frameworks<br>
 <br><br>
 
 <f1><b>Project Member</b></f1><br>
