--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ f1	{font-size:200%; color:#FFD700; line-height:1}
 Review of IT processes and controls over logical and physical access, password management, user account management, audit logging, program change management, system development lifecycle, computer operations etc., governing data integrity, confidentiality and availability<br>
 Attended professional training courses in assurance reporting and SAP modules<br>
 Exposed to banking risk management, custody, data analytics, global financial services, prime brokerage, private equity, securitization, treasury and various frameworks<br>
+Represented Topaz (Team Advisory) in KPMG Sports Carnival 2017, clinching first place in Cheerleading and second place in Touch Rugby, assisting Topaz to secure Overall Champion<br>
 <br><br>
 
 <f1><b>Project Member</b></f1><br>
