--- a/index.html
+++ b/index.html
@@ -91,6 +91,44 @@ Exposed to banking risk management, custody, data analytics, global financial se
 Represented Topaz (Team Advisory) in KPMG Sports Carnival 2017, clinching first place in Cheerleading and second place in Touch Rugby, assisting Topaz to secure Overall Champion<br>
 <br><br>
 
+<f1><b>Project Leader</b></f1><br>
+<f2>Singapore Bus Service (SBS) Transit</f2><br>
+<div style="display:flex; justify-content:space-between; width:96%;">
+<font style="color:#FFD700; font-weight:bold">Jan 2017 - Apr 2017
+<div class="nav">Singapore</font></div></div>
+Network Modeling: SBS Network<br>
+Worked with a team of 4 to find out relationship between the bus services in Singapore given a network model<br>
+Details of project is elaborated in Education and Projects tab.<br>
+Applied the knowledge of Python for data discovery, R for data visualization<br>
+<br>
+<i>Hover over thumbnail to enlarge image, click to open in new tab</i>
+<div class="imgHoverP">
+<img src="https://2.bp.blogspot.com/-UqUfzocV3UI/WXSNLt8ST3I/AAAAAAAAA18/yLRQkxZX80kHi-1eEyhi5tIiimKkJUp-ACLcBGAs/s1600/Network%2BModeling%2B1%2B%2528R%2Bcode%2529.JPG" alt="1. R Code" onclick="window.open('https://2.bp.blogspot.com/-UqUfzocV3UI/WXSNLt8ST3I/AAAAAAAAA18/yLRQkxZX80kHi-1eEyhi5tIiimKkJUp-ACLcBGAs/s1600/Network%2BModeling%2B1%2B%2528R%2Bcode%2529.JPG', '_blank');" />
+<span><div class="caption">1. R Code</div>
+<img src="https://2.bp.blogspot.com/-UqUfzocV3UI/WXSNLt8ST3I/AAAAAAAAA18/yLRQkxZX80kHi-1eEyhi5tIiimKkJUp-ACLcBGAs/s1600/Network%2BModeling%2B1%2B%2528R%2Bcode%2529.JPG" alt=""></span>
+</div>
+<div class="imgHoverP">
+<img src="https://2.bp.blogspot.com/-MYytrQaXUiw/WXSNLnVluJI/AAAAAAAAA10/SWe6VF6fXtg1L9fdvACbdhubkCYhsjZvgCLcBGAs/s1600/Network%2BModeling%2B2%2B%2528Centrality%2529.JPG" alt="2. Centrality" onclick="window.open('https://2.bp.blogspot.com/-MYytrQaXUiw/WXSNLnVluJI/AAAAAAAAA10/SWe6VF6fXtg1L9fdvACbdhubkCYhsjZvgCLcBGAs/s1600/Network%2BModeling%2B2%2B%2528Centrality%2529.JPG', '_blank');" />
+<span><div class="caption">2. Centrality</div>
+<img src="https://2.bp.blogspot.com/-MYytrQaXUiw/WXSNLnVluJI/AAAAAAAAA10/SWe6VF6fXtg1L9fdvACbdhubkCYhsjZvgCLcBGAs/s1600/Network%2BModeling%2B2%2B%2528Centrality%2529.JPG" alt=""></span>
+</div>
+<div class="imgHoverP">
+<img src="https://3.bp.blogspot.com/-imRusOiSr9I/WXSNMZpTGbI/AAAAAAAAA2E/nOJowWOw5UYG7Nym3O0LUq7z2q90p-HzwCLcBGAs/s1600/Network%2BModeling%2B3%2B%2528Degree%2BDistribution%2529.JPG" alt="3. Degree Distribution and Diameter" onclick="window.open('https://3.bp.blogspot.com/-imRusOiSr9I/WXSNMZpTGbI/AAAAAAAAA2E/nOJowWOw5UYG7Nym3O0LUq7z2q90p-HzwCLcBGAs/s1600/Network%2BModeling%2B3%2B%2528Degree%2BDistribution%2529.JPG', '_blank');" />
+<span><div class="caption">3. Degree Distribution and Diameter</div>
+<img src="https://3.bp.blogspot.com/-imRusOiSr9I/WXSNMZpTGbI/AAAAAAAAA2E/nOJowWOw5UYG7Nym3O0LUq7z2q90p-HzwCLcBGAs/s1600/Network%2BModeling%2B3%2B%2528Degree%2BDistribution%2529.JPG" alt=""></span>
+</div>
+<div class="imgHoverL">
+<img src="https://3.bp.blogspot.com/-4sT5TUCcnTw/WXSNMTXS1LI/AAAAAAAAA2I/GW-dZmZLNo4Aoc6UDvZVrgM6NNFSKTFkgCLcBGAs/s1600/Network%2BModeling%2B4%2B%2528Path%2529.JPG" alt="4. Path" onclick="window.open('https://3.bp.blogspot.com/-4sT5TUCcnTw/WXSNMTXS1LI/AAAAAAAAA2I/GW-dZmZLNo4Aoc6UDvZVrgM6NNFSKTFkgCLcBGAs/s1600/Network%2BModeling%2B4%2B%2528Path%2529.JPG', '_blank');" />
+<span><div class="caption">4. Path</div>
+<img src="https://3.bp.blogspot.com/-4sT5TUCcnTw/WXSNMTXS1LI/AAAAAAAAA2I/GW-dZmZLNo4Aoc6UDvZVrgM6NNFSKTFkgCLcBGAs/s1600/Network%2BModeling%2B4%2B%2528Path%2529.JPG" alt=""></span>
+</div>
+<div class="imgHoverL">
+<img src="https://3.bp.blogspot.com/-lA3Zwq3zDnQ/WXSNME0eJHI/AAAAAAAAA2A/bMg749Lws5UF43VN7adBhyZEx5LM5TxvgCLcBGAs/s1600/Network%2BModeling%2B5%2B%2528Modularity%2529.JPG" alt="5. Modularity" onclick="window.open('https://3.bp.blogspot.com/-lA3Zwq3zDnQ/WXSNME0eJHI/AAAAAAAAA2A/bMg749Lws5UF43VN7adBhyZEx5LM5TxvgCLcBGAs/s1600/Network%2BModeling%2B5%2B%2528Modularity%2529.JPG', '_blank');" />
+<span><div class="caption">5. Modularity</div>
+<img src="https://3.bp.blogspot.com/-lA3Zwq3zDnQ/WXSNME0eJHI/AAAAAAAAA2A/bMg749Lws5UF43VN7adBhyZEx5LM5TxvgCLcBGAs/s1600/Network%2BModeling%2B5%2B%2528Modularity%2529.JPG" alt=""></span>
+</div>
+<br><br><br>
+	
 <f1><b>Project Member</b></f1><br>
 <f2>YCH Group</f2><br>
 <div style="display:flex; justify-content:space-between; width:96%;">
