--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ Represented Topaz (Team Advisory) in KPMG Sports Carnival 2017, clinching first 
 <font style="color:#FFD700; font-weight:bold">Jan 2017 - Apr 2017
 <div class="nav">Singapore</font></div></div>
 Network Modeling: SBS Network<br>
-Worked with a team of 4 to find out relationship between the bus services in Singapore given a network model<br>
-Details of project is elaborated in Education and Projects tab.<br>
+Led a team of 4 to find out relationship between the bus services in Singapore given a network model<br>
+Details of project is elaborated in Education and Projects tab<br>
 Applied the knowledge of Python for data discovery and R for data visualization<br>
 <br>
 <i>Hover over thumbnail to enlarge image, click to open in new tab</i>
