--- a/index.html
+++ b/index.html
@@ -35,28 +35,6 @@ a:hover 	{color:#FFD700;}
 		color:white; font-weight:bold;}
 .mainbody	{background-color:white; position:relative; top:120px; left:10%; width:80%; height:auto;
 		display:table; overflow:auto;}
-.imgDefault	{height:200px;}
-.imgHoverP img	{height:30px; float:left; margin-left:10px; position:relative;}
-.imgHoverP span	{position:fixed; top:0; left:0; bottom:0; right:0;
-		display:none; z-index:9999; background-color:rgba(119, 136, 153, 0.7);
-		pointer-events:none;}
-.imgHoverP:hover span 	{display:block;}
-.imgHoverP:hover span img{height:92.5%; top:2.5%; left:50%; -webkit-transform:translateX(-50%); -ms-transform:translateX(-50%); transform:translateX(-50%);}
-.imgHoverL img	{height:30px; float:left; margin-left:10px; position:relative;}
-.imgHoverL span	{position:fixed; top:0; left:0; bottom:0; right:0;
-		display:none; z-index:9999; background-color:rgba(119, 136, 153, 0.7);
-		pointer-events:none;}
-.imgHoverL:hover span 	{display:block;}
-.imgHoverL:hover span img{height:auto; width:90%; left:5%; top:50%; -webkit-transform:translateY(-50%); -ms-transform:translateY(-50%); transform:translateY(-50%);}
-.caption	{display:inline-block; position:absolute; top:95%; height:auto; width:auto; max-width:80%; z-index:9999; background-color:rgba(119, 136, 153, 0.7);
-		left:50%; -webkit-transform:translateX(-50%); -ms-transform:translateX(-50%); transform:translateX(-50%);
-		text-align:center; font-size:1.5em; font-weight:bold; color:white; padding:3px 0;}
-@media (max-width:800px) {
-f1	{font-size:200%; color:#FFD700; line-height:1}
-.imgHoverP:hover span 	{display:none;}
-.imgHoverL:hover span 	{display:none;}
-.caption	{display:none;}
-}
 </style>
 </head>
 
@@ -80,7 +58,9 @@ f1	{font-size:200%; color:#FFD700; line-height:1}
 	
 <div class="mainbody">
 <div style="display:inline-block; padding:2%; width:100%">
-<f1><b>Management Intern (IT Assurance and Security)</b></f1><br>
+<f1><b>Work Experience</b></f1><br><br>
+<div style="padding-left:20px">
+<f2><b>Management Intern (IT Assurance and Security)</b></f2><br>
 <f2>KPMG</f2><br>
 <div style="display:flex; justify-content:space-between; width:96%;">
 <font style="color:#FFD700; font-weight:bold">May 2017 - Jul 2017
@@ -91,79 +71,40 @@ Exposed to banking risk management, custody, data analytics, global financial se
 Represented Topaz (Team Advisory) in KPMG Sports Carnival 2017, clinching first place in Cheerleading and second place in Touch Rugby, assisting Topaz to secure Overall Champion<br>
 <br><br>
 
-<f1><b>Project Leader</b></f1><br>
+<f2><b>Project Leader</b></f2><br>
 <f2>Singapore Bus Service (SBS) Transit</f2><br>
 <div style="display:flex; justify-content:space-between; width:96%;">
 <font style="color:#FFD700; font-weight:bold">Jan 2017 - Apr 2017
 <div class="nav">Singapore</font></div></div>
 Network Modeling: SBS Network<br>
 Led a team of 4 to find out relationship between the bus services in Singapore given a network model<br>
-Details of project is elaborated in Education and Projects tab<br>
+Details of project is elaborated in Education and Projects > Projects tab<br>
 Applied the knowledge of Python for data discovery and R for data visualization<br>
-<br>
-<i>Hover over thumbnail to enlarge image, click to open in new tab</i>
-<div class="imgHoverP">
-<img src="https://2.bp.blogspot.com/-UqUfzocV3UI/WXSNLt8ST3I/AAAAAAAAA18/yLRQkxZX80kHi-1eEyhi5tIiimKkJUp-ACLcBGAs/s1600/Network%2BModeling%2B1%2B%2528R%2Bcode%2529.JPG" alt="1. R Code" onclick="window.open('https://2.bp.blogspot.com/-UqUfzocV3UI/WXSNLt8ST3I/AAAAAAAAA18/yLRQkxZX80kHi-1eEyhi5tIiimKkJUp-ACLcBGAs/s1600/Network%2BModeling%2B1%2B%2528R%2Bcode%2529.JPG', '_blank');" />
-<span><div class="caption">1. R Code</div>
-<img src="https://2.bp.blogspot.com/-UqUfzocV3UI/WXSNLt8ST3I/AAAAAAAAA18/yLRQkxZX80kHi-1eEyhi5tIiimKkJUp-ACLcBGAs/s1600/Network%2BModeling%2B1%2B%2528R%2Bcode%2529.JPG" alt=""></span>
-</div>
-<div class="imgHoverP">
-<img src="https://2.bp.blogspot.com/-MYytrQaXUiw/WXSNLnVluJI/AAAAAAAAA10/SWe6VF6fXtg1L9fdvACbdhubkCYhsjZvgCLcBGAs/s1600/Network%2BModeling%2B2%2B%2528Centrality%2529.JPG" alt="2. Centrality" onclick="window.open('https://2.bp.blogspot.com/-MYytrQaXUiw/WXSNLnVluJI/AAAAAAAAA10/SWe6VF6fXtg1L9fdvACbdhubkCYhsjZvgCLcBGAs/s1600/Network%2BModeling%2B2%2B%2528Centrality%2529.JPG', '_blank');" />
-<span><div class="caption">2. Centrality</div>
-<img src="https://2.bp.blogspot.com/-MYytrQaXUiw/WXSNLnVluJI/AAAAAAAAA10/SWe6VF6fXtg1L9fdvACbdhubkCYhsjZvgCLcBGAs/s1600/Network%2BModeling%2B2%2B%2528Centrality%2529.JPG" alt=""></span>
-</div>
-<div class="imgHoverP">
-<img src="https://3.bp.blogspot.com/-imRusOiSr9I/WXSNMZpTGbI/AAAAAAAAA2E/nOJowWOw5UYG7Nym3O0LUq7z2q90p-HzwCLcBGAs/s1600/Network%2BModeling%2B3%2B%2528Degree%2BDistribution%2529.JPG" alt="3. Degree Distribution and Diameter" onclick="window.open('https://3.bp.blogspot.com/-imRusOiSr9I/WXSNMZpTGbI/AAAAAAAAA2E/nOJowWOw5UYG7Nym3O0LUq7z2q90p-HzwCLcBGAs/s1600/Network%2BModeling%2B3%2B%2528Degree%2BDistribution%2529.JPG', '_blank');" />
-<span><div class="caption">3. Degree Distribution and Diameter</div>
-<img src="https://3.bp.blogspot.com/-imRusOiSr9I/WXSNMZpTGbI/AAAAAAAAA2E/nOJowWOw5UYG7Nym3O0LUq7z2q90p-HzwCLcBGAs/s1600/Network%2BModeling%2B3%2B%2528Degree%2BDistribution%2529.JPG" alt=""></span>
-</div>
-<div class="imgHoverL">
-<img src="https://3.bp.blogspot.com/-4sT5TUCcnTw/WXSNMTXS1LI/AAAAAAAAA2I/GW-dZmZLNo4Aoc6UDvZVrgM6NNFSKTFkgCLcBGAs/s1600/Network%2BModeling%2B4%2B%2528Path%2529.JPG" alt="4. Path" onclick="window.open('https://3.bp.blogspot.com/-4sT5TUCcnTw/WXSNMTXS1LI/AAAAAAAAA2I/GW-dZmZLNo4Aoc6UDvZVrgM6NNFSKTFkgCLcBGAs/s1600/Network%2BModeling%2B4%2B%2528Path%2529.JPG', '_blank');" />
-<span><div class="caption">4. Path</div>
-<img src="https://3.bp.blogspot.com/-4sT5TUCcnTw/WXSNMTXS1LI/AAAAAAAAA2I/GW-dZmZLNo4Aoc6UDvZVrgM6NNFSKTFkgCLcBGAs/s1600/Network%2BModeling%2B4%2B%2528Path%2529.JPG" alt=""></span>
-</div>
-<div class="imgHoverL">
-<img src="https://3.bp.blogspot.com/-lA3Zwq3zDnQ/WXSNME0eJHI/AAAAAAAAA2A/bMg749Lws5UF43VN7adBhyZEx5LM5TxvgCLcBGAs/s1600/Network%2BModeling%2B5%2B%2528Modularity%2529.JPG" alt="5. Modularity" onclick="window.open('https://3.bp.blogspot.com/-lA3Zwq3zDnQ/WXSNME0eJHI/AAAAAAAAA2A/bMg749Lws5UF43VN7adBhyZEx5LM5TxvgCLcBGAs/s1600/Network%2BModeling%2B5%2B%2528Modularity%2529.JPG', '_blank');" />
-<span><div class="caption">5. Modularity</div>
-<img src="https://3.bp.blogspot.com/-lA3Zwq3zDnQ/WXSNME0eJHI/AAAAAAAAA2A/bMg749Lws5UF43VN7adBhyZEx5LM5TxvgCLcBGAs/s1600/Network%2BModeling%2B5%2B%2528Modularity%2529.JPG" alt=""></span>
-</div>
-<br><br><br>
-	
-<f1><b>Project Member</b></f1><br>
+<br><br>
+
+<f2><b>Project Member</b></f2><br>
 <f2>YCH Group</f2><br>
 <div style="display:flex; justify-content:space-between; width:96%;">
 <font style="color:#FFD700; font-weight:bold">Jan 2017 - Apr 2017
 <div class="nav">Singapore</font></div></div>
 Operations Management: Inventory Level Optimizing<br>
 Worked with a team of 5 to forecast demand to optimize inventory planning and restocking policy<br>
+Details of project is elaborated in Education and Projects > Projects tab<br>
 Applied the knowledge of R for data discovery, Python for data visualization and ExtendSim for model simulation<br>
-<br>
-<i>Hover over thumbnail to enlarge image, click to open in new tab</i>
-<div class="imgHoverP">
-<img src="https://2.bp.blogspot.com/-v_nlFTdYXns/WVT7ss49PbI/AAAAAAAAAzQ/dT4CjczlczMieYgk11XGMUtsZCwq7DJfQCLcBGAs/s1600/Term%2B5%2BOM.jpg" alt="yes" onclick="window.open('https://2.bp.blogspot.com/-v_nlFTdYXns/WVT7ss49PbI/AAAAAAAAAzQ/dT4CjczlczMieYgk11XGMUtsZCwq7DJfQCLcBGAs/s1600/Term%2B5%2BOM.jpg', '_blank');" />
-<span><div class="caption">Operations Management: Inventory Level Optimizing</div>
-<img src="https://2.bp.blogspot.com/-v_nlFTdYXns/WVT7ss49PbI/AAAAAAAAAzQ/dT4CjczlczMieYgk11XGMUtsZCwq7DJfQCLcBGAs/s1600/Term%2B5%2BOM.jpg" alt=""></span>
-</div>
-<br><br><br>
+<br><br>
 
-<f1><b>Project Leader</b></f1><br>
+<f2><b>Project Leader</b></f2><br>
 <f2>Park Avenue Hotel</f2><br>
 <div style="display:flex; justify-content:space-between; width:96%;">
 <font style="color:#FFD700; font-weight:bold">Sep 2016 - Dec 2016
 <div class="nav">Singapore</font></div></div>
 Engineering Systems Design: Maximising Revenue per Available Time-Based Unit<br>
 Led a group of 4 to determine the ideal hotel rate based on occupancy rate forecast and other variables in order to maximize revenue<br>
-Applied the knowledge of R extensively to find correlation and visualize data
+Details of project is elaborated in Education and Projects > Projects tab<br>
+Applied the knowledge of R extensively to find correlation and visualize data<br>
 <br><br>
-<i>Hover over thumbnail to enlarge image, click to open in new tab</i>
-<div class="imgHoverP">
-<img src="https://2.bp.blogspot.com/-iactxVKEnM0/WVT7sEucu3I/AAAAAAAAAzU/pGQ_u9qEhl0f7fryvNcQXa0c3h72DR6yQCLcBGAs/s1600/Term%2B4%2BESD.png" alt="yes" onclick="window.open('https://2.bp.blogspot.com/-iactxVKEnM0/WVT7sEucu3I/AAAAAAAAAzU/pGQ_u9qEhl0f7fryvNcQXa0c3h72DR6yQCLcBGAs/s1600/Term%2B4%2BESD.png', '_blank');" />
-<span><div class="caption">Engineering Systems Design: Maximising Revenue</div>
-<img src="https://2.bp.blogspot.com/-iactxVKEnM0/WVT7sEucu3I/AAAAAAAAAzU/pGQ_u9qEhl0f7fryvNcQXa0c3h72DR6yQCLcBGAs/s1600/Term%2B4%2BESD.png" alt=""></span>
-</div>
-<br><br><br>
 
-<f1><b>Campus Ambassador</b></f1><br>
+<f2><b>Campus Ambassador</b></f2><br>
 <f2>Deutsche Bank</f2><br>
 <div style="display:flex; justify-content:space-between; width:96%;">
 <font style="color:#FFD700; font-weight:bold">Aug 2016 - Present
@@ -172,7 +113,7 @@ Assist in building networks within campus and with the employer brand and recrui
 Influence and shape Deutsche Bank's on-campus marketing activities and recruitment strategies<br>
 <br><br>
 
-<f1><b>Daycare Tutor</b></f1><br>
+<f2><b>Daycare Tutor</b></f2><br>
 <f2>Dajin Daycare</f2><br>
 <div style="display:flex; justify-content:space-between; width:96%;">
 <font style="color:#FFD700; font-weight:bold">Dec 2014 - Apr 2015
@@ -181,13 +122,13 @@ Nurtured primary school children, up to a class of 20 students, and taught the s
 Tutored the weaker students personally after daycare working hours to help the students understand the main concepts and catch up with the rest of the class<br>
 <br><br>
 
-<f1><b>Private Tutor</b></f1><br>
+<f2><b>Private Tutor</b></f2><br>
 <div style="display:flex; justify-content:space-between; width:96%;">
 <font style="color:#FFD700; font-weight:bold">Dec 2014 - Oct 2015
 <div class="nav">Singapore</font></div></div>
 Provide one-to-one private tuition for Junior College Mathematics and Primary School English, Mathematics and Science<br>
 <br><br>
-</div>
+</div></div></div>
 
 
 <div style="position:fixed; right:1%; bottom:0; padding:0; border:0;">
