--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body 	{font-family:'Calibri', Fallback, Sans-Serif;
 	url('Calibri.ttf')  format('truetype'), /* Safari, Android, iOS */
 	url('Calibri.svg#svgFontName') format('svg'); /* Legacy iOS */}
 f1	{font-size:200%; color:#FFD700; line-height:1.2}
-f2	{font-size:130%; font-weight:bold; line-height:0.8;}
+f2	{font-size:130%; font-weight:bold; line-height:1.2;}
 f3	{font-size:437.5%; font-weight:bold; color:#FFD700; line-height:0.8;}
 f4	{font-size:120%; font-weight:bold; line-height:1.4;}
 i 	{color:black; font-style:italic;}
@@ -60,7 +60,7 @@ a:hover 	{color:#FFD700;}
 <div style="display:inline-block; padding:2%; width:100%">
 <f1><b>Work Experience</b></f1><br><br>
 <div style="padding-left:20px">
-<f2><b>Management Intern (IT Assurance and Security)</b></f2><br>
+<f2>Management Intern (IT Assurance and Security)</f2><br>
 <f2>KPMG</f2><br>
 <div style="display:flex; justify-content:space-between; width:96%;">
 <font style="color:#FFD700; font-weight:bold">May 2017 - Jul 2017
@@ -71,7 +71,7 @@ Exposed to banking risk management, custody, data analytics, global financial se
 Represented Topaz (Team Advisory) in KPMG Sports Carnival 2017, clinching first place in Cheerleading and second place in Touch Rugby, assisting Topaz to secure Overall Champion<br>
 <br><br>
 
-<f2><b>Project Leader</b></f2><br>
+<f2>Project Leader</f2><br>
 <f2>Singapore Bus Service (SBS) Transit</f2><br>
 <div style="display:flex; justify-content:space-between; width:96%;">
 <font style="color:#FFD700; font-weight:bold">Jan 2017 - Apr 2017
@@ -82,7 +82,7 @@ Details of project is elaborated in Education and Projects > Projects tab<br>
 Applied the knowledge of Python for data discovery and R for data visualization<br>
 <br><br>
 
-<f2><b>Project Member</b></f2><br>
+<f2>Project Member</f2><br>
 <f2>YCH Group</f2><br>
 <div style="display:flex; justify-content:space-between; width:96%;">
 <font style="color:#FFD700; font-weight:bold">Jan 2017 - Apr 2017
@@ -93,7 +93,7 @@ Details of project is elaborated in Education and Projects > Projects tab<br>
 Applied the knowledge of R for data discovery, Python for data visualization and ExtendSim for model simulation<br>
 <br><br>
 
-<f2><b>Project Leader</b></f2><br>
+<f2>Project Leader</f2><br>
 <f2>Park Avenue Hotel</f2><br>
 <div style="display:flex; justify-content:space-between; width:96%;">
 <font style="color:#FFD700; font-weight:bold">Sep 2016 - Dec 2016
@@ -104,7 +104,7 @@ Details of project is elaborated in Education and Projects > Projects tab<br>
 Applied the knowledge of R extensively to find correlation and visualize data<br>
 <br><br>
 
-<f2><b>Campus Ambassador</b></f2><br>
+<f2>Campus Ambassador</f2><br>
 <f2>Deutsche Bank</f2><br>
 <div style="display:flex; justify-content:space-between; width:96%;">
 <font style="color:#FFD700; font-weight:bold">Aug 2016 - Present
@@ -122,13 +122,42 @@ Nurtured primary school children, up to a class of 20 students, and taught the s
 Tutored the weaker students personally after daycare working hours to help the students understand the main concepts and catch up with the rest of the class<br>
 <br><br>
 
-<f2><b>Private Tutor</b></f2><br>
+<f2>Private Tutor</f2><br>
 <div style="display:flex; justify-content:space-between; width:96%;">
 <font style="color:#FFD700; font-weight:bold">Dec 2014 - Oct 2015
 <div class="nav">Singapore</font></div></div>
 Provide one-to-one private tuition for Junior College Mathematics and Primary School English, Mathematics and Science<br>
 <br><br>
-</div></div></div>
+</div></div></div><br><br>
+
+
+<div class="mainbody">
+<div style="display:inline-block; padding:2%; width:100%">
+<f1><b>Technical Skills</b></f1><br><br>
+<div style="padding-left:20px">
+<f2>Programming Languages</f2><br>
+HTML, Python, Kivy, R and Matlab
+<br><br>
+<f2>Microsoft Office</f2><br>
+Microsoft Word, Power Point, Excel and VBA
+<br><br>
+<f2>Adobe Systems</f2><br>
+Adobe Photoshop and Premiere Pro
+<br><br>
+<f2>Other Softwares</f2><br>
+SQL, MySQL, QuantumGIS, ExtendSim, DecisionVis, Disco and KNIME
+<br><br>
+</div></div></div><br><br>
+
+
+<div class="mainbody">
+<div style="display:inline-block; padding:2%; width:100%">
+<f1><b>Languages</b></f1><br><br>
+<div style="padding-left:20px">
+<f2>Cantonese</f2><br><br>
+<f2>Chinese</f2><br><br>
+<f2>English</f2><br><br>
+</div></div></div><br><br>
 
 
 <div style="position:fixed; right:1%; bottom:0; padding:0; border:0;">
