--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Represented Topaz (Team Advisory) in KPMG Sports Carnival 2017, clinching first 
 <div class="nav">Singapore</font></div></div>
 Network Modeling: SBS Network<br>
 Led a team of 4 to find out relationship between the bus services in Singapore given a network model<br>
-Details of project is elaborated in Education and Projects > Projects tab<br>
+Details of project is elaborated in Education and Projects > Industry Projects tab<br>
 Applied the knowledge of Python for data discovery and R for data visualization<br>
 <br><br>
 
@@ -89,7 +89,7 @@ Applied the knowledge of Python for data discovery and R for data visualization<
 <div class="nav">Singapore</font></div></div>
 Operations Management: Inventory Level Optimizing<br>
 Worked with a team of 5 to forecast demand to optimize inventory planning and restocking policy<br>
-Details of project is elaborated in Education and Projects > Projects tab<br>
+Details of project is elaborated in Education and Projects > Industry Projects tab<br>
 Applied the knowledge of R for data discovery, Python for data visualization and ExtendSim for model simulation<br>
 <br><br>
 
