--- a/index.html
+++ b/index.html
@@ -154,9 +154,15 @@ SQL, MySQL, QuantumGIS, ExtendSim, DecisionVis, Disco and KNIME
 <div style="display:inline-block; padding:2%; width:100%">
 <f1><b>Languages</b></f1><br><br>
 <div style="padding-left:20px">
-<f2>Cantonese</f2><br><br>
-<f2>Chinese</f2><br><br>
-<f2>English</f2><br><br>
+<f2>Cantonese</f2><br>
+Professional Working Proficiency
+<br><br>
+<f2>Chinese</f2><br>
+Native or Bilingual Proficiency
+<br><br>
+<f2>English</f2><br>
+Native or Bilingual Proficiency
+<br><br>
 </div></div></div><br><br>
 
 
