--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@ Provide one-to-one private tuition for Junior College Mathematics and Primary Sc
 <f1><b>Technical Skills</b></f1><br><br>
 <div style="padding-left:20px">
 <f2>Programming Languages</f2><br>
-HTML, Python, Kivy, R, Matlab
+HTML, Matlab, Python (Hadoop, Kivy, Web Scraping) R, VBA
 <br><br>
 <f2>Microsoft Office</f2><br>
-Microsoft Word, Power Point, Excel, VBA
+Microsoft Word, Power Point, Excel (Palisade)
 <br><br>
 <f2>Adobe Systems</f2><br>
-Adobe Photoshop, Adobe Premiere Pro
+Adobe Illustrator, Adobe Photoshop, Adobe Premiere Pro
 <br><br>
 <f2>Other Softwares</f2><br>
 SQL, MySQL, QuantumGIS, ExtendSim, DecisionVis, Disco (Process Mining), KNIME<br>
