--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ Provide one-to-one private tuition for Junior College Mathematics and Primary Sc
 HTML, Matlab, Python (Hadoop, Kivy, Web Scraping) R, VBA
 <br><br>
 <f2>Microsoft Office</f2><br>
-Microsoft Word, Power Point, Excel (Palisade)
+Microsoft Excel (Palisade), Power Point, Word
 <br><br>
 <f2>Adobe Systems</f2><br>
 Adobe Illustrator, Adobe Photoshop, Adobe Premiere Pro
