--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@ a:hover 	{color:#FFD700;}
 <div style="display:inline-block; padding:2%; width:100%">
 <f1><b>Work Experience</b></f1><br><br>
 <div style="padding-left:20px">
+<f2>Analyst Executive (Technology and Operations)</f2><br>
+<f2>DBS</f2><br>
+<div style="display:flex; justify-content:space-between; width:96%;">
+<font style="color:#FFD700; font-weight:bold">Aug 2018 - Present
+<div class="nav">Singapore</font></div></div>
+Part of the Business Analytics Graduate Immersion Programme (BAGIP) which is a 12-month accelerated programme that focuses on developing core analytical skills essential to business growth<br>
+<br><br>
+	
 <f2>Management Intern (IT Assurance and Security)</f2><br>
 <f2>KPMG</f2><br>
 <div style="display:flex; justify-content:space-between; width:96%;">
@@ -136,7 +144,7 @@ Provide one-to-one private tuition for Junior College Mathematics and Primary Sc
 <f1><b>Technical Skills</b></f1><br><br>
 <div style="padding-left:20px">
 <f2>Programming Languages</f2><br>
-HTML, Matlab, Python (Hadoop, Kivy, Web Scraping) R, VBA
+HTML, Matlab, Python (Hadoop, Kivy, Spark, Web Scraping), R, VBA
 <br><br>
 <f2>Microsoft Office</f2><br>
 Microsoft Excel (Palisade), Power Point, Word
@@ -145,8 +153,8 @@ Microsoft Excel (Palisade), Power Point, Word
 Adobe Illustrator, Adobe Photoshop, Adobe Premiere Pro
 <br><br>
 <f2>Other Softwares</f2><br>
-SQL, MySQL, QuantumGIS, ExtendSim, DecisionVis, Disco (Process Mining), KNIME<br>
-Parallel Coordinates, Press 7
+AMPL, ExtendSim, SQL, MySQL, Tableau, QuantumGIS<br>
+DecisionVis, Disco (Process Mining), KNIME, Parallel Coordinates, Press 7
 <br><br>
 </div></div></div><br><br>
 
