--- a/index.html
+++ b/index.html
@@ -79,6 +79,17 @@ Exposed to banking risk management, custody, data analytics, global financial se
 Represented Topaz (Team Advisory) in KPMG Sports Carnival 2017, clinching first place in Cheerleading and second place in Touch Rugby, assisting Topaz to secure Overall Champion<br>
 <br><br>
 
+<f2>Systems Engineer</f2><br>
+<f2>inlingua School of Languages</f2><br>
+<div style="display:flex; justify-content:space-between; width:96%;">
+<font style="color:#FFD700; font-weight:bold">Jan 2018 - Jun 2018
+<div class="nav">Singapore</font></div></div>
+Capstone (FYP): inlingua School of Languages<br>
+Worked with a team of 6 to increase the use of data analytics and reduce manual workflow inefficiencies within the company<br>
+Details of project is elaborated in Education and Projects > Industry Projects tab<br>
+Applied the knowledge of Tableau for data discovery, Python for forecasting, AMPL for timetable optimization and JavaScript for data visualization<br>
+<br><br>
+
 <f2>Project Leader</f2><br>
 <f2>Singapore Bus Service (SBS) Transit</f2><br>
 <div style="display:flex; justify-content:space-between; width:96%;">
