--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@ a:hover 	{color:#FFD700;}
 <font style="color:#FFD700; font-weight:bold">Aug 2018 - Present
 <div class="nav">Singapore</font></div></div>
 Part of the Business Analytics Graduate Immersion Programme (BAGIP) which is a 12-month accelerated programme that focuses on developing core analytical skills essential to business growth<br>
+Built, deployed and monitored ML pipeline and performed system integration testing as part of the iconic call centre reduction project to predict and address customers' needs prior to call<br>
+Performed predictive analysis with rule-based model as a real-time use case<br>
+Formalized and implemented Feature Mart as part of Reusable Assets initiative<br>
+Second most active Coursera user, based on course completion, in the company in 2018<br>
 <br><br>
 
 <f2>Systems Engineer</f2><br>
@@ -155,16 +159,18 @@ Provide one-to-one private tuition for Junior College Mathematics and Primary Sc
 <f1><b>Technical Skills</b></f1><br><br>
 <div style="padding-left:20px">
 <f2>Programming Languages</f2><br>
-HTML, Matlab, Python (Hadoop, Kivy, Spark, Web Scraping), R, VBA
+Python (Kivy, Web Scaping), PySpark, SQL, R<br>
+AMPL, VBA, HTML, Matlab<br>
+Cassandra, Kafka, Redis
 <br><br>
 <f2>Microsoft Office</f2><br>
-Microsoft Excel (Palisade), Power Point, Word
+Microsoft Excel (Palisade, @Risk), Power Point, Word
 <br><br>
 <f2>Adobe Systems</f2><br>
 Adobe Illustrator, Adobe Photoshop, Adobe Premiere Pro
 <br><br>
 <f2>Other Softwares</f2><br>
-AMPL, ExtendSim, SQL, MySQL, Tableau, QuantumGIS<br>
+ExtendSim, Tableau, QuantumGIS<br>
 DecisionVis, Disco (Process Mining), KNIME, Parallel Coordinates, Press 7
 <br><br>
 </div></div></div><br><br>
