--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Applied the knowledge of R for data discovery, Python for data visualization and
 Engineering Systems Design: Maximising Revenue per Available Time-Based Unit<br>
 Led a group of 4 to determine the ideal hotel rate based on occupancy rate forecast and other variables in order to maximize revenue<br>
 Details of project is elaborated in Education and Projects > Industry Projects tab<br>
-Applied the knowledge of R extensively to find correlation and visualize data<br>
+Applied the knowledge of SQL for data storage and processing and R extensively to clean industry data, find correlation and visualise data<br>
 <br><br>
 
 <f2>Campus Ambassador</f2><br>
