--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@ Provide one-to-one private tuition for Junior College Mathematics and Primary Sc
 <f1><b>Technical Skills</b></f1><br><br>
 <div style="padding-left:20px">
 <f2>Programming Languages</f2><br>
-Python (Kivy, Web Scaping), PySpark, SQL, R<br>
+Python (Kivy, Web Scaping), PySpark, SQL, R, Java<br>
 AMPL, VBA, HTML, Matlab<br>
 Cassandra, Kafka, Redis
 <br><br>
 <f2>Microsoft Office</f2><br>
-Microsoft Excel (Palisade, @Risk), Power Point, Word
+Microsoft Excel (Palisade, @Risk), Power Point, Visio, Word
 <br><br>
 <f2>Adobe Systems</f2><br>
 Adobe Illustrator, Adobe Photoshop, Adobe Premiere Pro
