--- a/index.html
+++ b/index.html
@@ -60,13 +60,15 @@ a:hover 	{color:#FFD700;}
 <div style="display:inline-block; padding:2%; width:100%">
 <f1><b>Work Experience</b></f1><br><br>
 <div style="padding-left:20px">
-<f2>Analyst Executive (Technology and Operations)</f2><br>
+<f2>Junior Data Scientist (Transformation Group, Analytics Centre of Excellence)</f2><br>
 <f2>DBS</f2><br>
 <div style="display:flex; justify-content:space-between; width:96%;">
 <font style="color:#FFD700; font-weight:bold">Aug 2018 - Present
 <div class="nav">Singapore</font></div></div>
 Part of the Business Analytics Graduate Immersion Programme (BAGIP) which is a 12-month accelerated programme that focuses on developing core analytical skills essential to business growth<br>
-Built, deployed and monitored ML pipeline and performed system integration testing as part of the iconic call centre reduction project to predict and address customers' needs prior to call<br>
+Delivered data analysis and insights in accordance to business requirements to track model performance, support experimentation and drive decision making<br>
+Led the design and creation of improved data and feature engineering pipeline architecture to standardise processing, reduce resource wastage and increase scalability<br>
+Built, deployed and monitored ML pipeline and performed system integration testing as part of the iconic call centre reduction project (CCTR) to predict and address customers' needs prior to call<br>
 Performed predictive analysis with rule-based model as a real-time use case<br>
 Formalized and implemented Feature Mart as part of Reusable Assets initiative<br>
 Second most active Coursera user, based on course completion, in the company in 2018<br>
