--- a/index.html
+++ b/index.html
@@ -66,11 +66,17 @@ a:hover 	{color:#FFD700;}
 <font style="color:#FFD700; font-weight:bold">Aug 2018 - Present
 <div class="nav">Singapore</font></div></div>
 Part of the Business Analytics Graduate Immersion Programme (BAGIP) which is a 12-month accelerated programme that focuses on developing core analytical skills essential to business growth<br>
-Delivered data analysis and insights in accordance to business requirements to track model performance, support experimentation and drive decision making<br>
-Led the design and creation of improved data and feature engineering pipeline architecture to standardise processing, reduce resource wastage and increase scalability<br>
+<br><b>CCTR Project</b><br>
 Built, deployed and monitored ML pipeline and performed system integration testing as part of the iconic call centre reduction project (CCTR) to predict and address customers' needs prior to call<br>
 Performed predictive analysis with rule-based model as a real-time use case<br>
+Delivered data analysis and insights in accordance to business requirements to track model performance, support experimentation and drive decision making<br>
+Led the design and creation of improved data and feature engineering pipeline architecture to standardise processing, reduce resource wastage and increase scalability, resulting in time savings of over 60 hours <br>
+
+<br><b>Reusable Asset</b><br>
+Implemented time series forecasting models and built web UI for non-technical users using Dash and Plotly as part of Reusable Assets initiative<br>
 Formalized and implemented Feature Mart as part of Reusable Assets initiative<br>
+
+<br><b>Others</b><br>
 Second most active Coursera user, based on course completion, in the company in 2018<br>
 <br><br>
 
