--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 				<f1><b>Technical Skills</b></f1><br><br>
 				<div style="padding-left:20px">
 					<f2>Programming Languages/Tools</f2><br>
-					Pyspark, Python (Kivy, Web Scaping), R, SQL, Java, VBA, HTML, Matlab<br>
+					Pyspark, Python (Dash, Kivy, Web Scaping), R, SQL, VBA, Java, HTML, Matlab<br>
 					Cassandra, Kafka, Redis
 					<br><br>
 					<f2>Data Analytics Tools</f2><br>
