--- a/index.html
+++ b/index.html
@@ -73,12 +73,14 @@
 					Built, deployed and monitored ML pipeline and performed system integration testing as part of the iconic call centre reduction project (CCTR) to predict and address customers' needs prior to call<br>
 					Performed predictive analysis with rule-based model as a real-time use case<br>
 					Delivered data analysis and insights in accordance to business requirements to track model performance, support experimentation and drive decision making<br>
-					Led the design and creation of improved data and feature engineering pipeline architecture to standardise processing, reduce resource wastage and increase scalability, resulting in time savings of over 35 hours<br>
+					Pioneered an improved data and feature engineering pipeline architecture to standardise processing, reduce resource wastage and increase scalability, resulting in time savings of over 35 hours<br>
 
-					<br><b>Reusable Asset</b><br>
-					Implemented time series forecasting EDA, processing, models and pipelines as part of Forecast Reusable Assets initiative<br>
-					Led the design and creation of web UI for non-technical users using Dash and Plotly, and deployed it using Jenkins and OpenShift tools as part of Forecast Reusable Assets initiative<br>
-					Formalized and implemented Feature Mart as part of Reusable Assets initiative<br>
+					<br><b>Forecast Reusable Asset</b><br>
+                                        Developed forecasting methods for time series, involving EDA, processing, models and pipelines<br>
+					Launched an enterprise-wide Web UI encompassing time series forecasting methods using Dash and Plotly, and deployed it using Jenkins and OpenShift tools<br>
+
+					<br><b>Feature Mart Reusable Asset</b><br>
+                                        Formalized and implemented Feature Mart to automate feature creation from CBG data and standardising processing required<br>
 
 					<br><b>Others</b><br>
 					Second most active Coursera user, based on course completion, in the company in 2018<br>
