--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					Part of the Business Analytics Graduate Immersion Programme (BAGIP) which is a 12-month accelerated programme that focuses on developing core analytical skills essential to business growth<br>
 					<br><b>CCTR Project</b><br>
 					Built, deployed and monitored ML pipeline and performed system integration testing as part of the iconic call centre reduction project (CCTR) to predict and address customers' needs prior to call<br>
-					Performed predictive analysis with rule-based model as a real-time use case<br>
+					Performed predictive analysis with rule-based model as a real-time use case using Adobe IBMB clickstream data<br>
 					Delivered data analysis and insights in accordance to business requirements to track model performance, support experimentation and drive decision making<br>
 					Pioneered an improved data and feature engineering pipeline architecture to standardise processing, reduce resource wastage and increase scalability, resulting in time savings of over 35 hours<br>
 
