--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<div style="display:flex; justify-content:space-between; width:96%;">
 						<font style="color:#FFD700; font-weight:bold">Aug 2018 - Present
 							<div class="nav">Singapore</font></div></div>
-					Part of the Business Analytics Graduate Immersion Programme (BAGIP) which is a 12-month accelerated programme focused on developing core analytical skills essential to business growth<br>
+					Part of the Business Analytics Graduate Immersion Programme (BAGIP) which is a 12-month accelerated programme focused on building core analytical skills essential to business growth<br>
 					<br><b>CCTR Project</b><br>
 					Built, deployed and monitored ML pipeline and performed system integration testing as part of the iconic call centre reduction project (CCTR) to predict and address customers' needs prior to call<br>
 					Performed predictive analysis with rule-based model as a real-time use case using Adobe IBMB clickstream data<br>
