--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					Launched an enterprise-wide Web UI encompassing time series forecasting methods using Dash and Plotly, and deployed it using Jenkins and OpenShift tools<br>
 
 					<br><b>Feature Mart Reusable Asset</b><br>
-                                        Formalized and implemented Feature Mart to automate feature creation from CBG data and standardising processing required<br>
+                                        Formalized and implemented Feature Mart which automates feature creation for CBG data and standardises processing required<br>
 
 					<br><b>Others</b><br>
 					Second most active Coursera user, based on course completion, in the company in 2018<br>
