--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 						<font style="color:#FFD700; font-weight:bold">Aug 2018 - Present
 							<div class="nav">Singapore</font></div></div>
 					Part of the Business Analytics Graduate Immersion Programme (BAGIP) which is a 12-month accelerated programme focused on building core analytical skills essential to business growth<br>
-					<br><b>CCTR Project</b><br>
-					Built, deployed and monitored ML pipeline and performed system integration testing as part of the iconic call centre reduction project (CCTR) to predict and address customers' needs prior to call<br>
-					Performed predictive analysis with rule-based model as a real-time use case using Adobe IBMB clickstream data<br>
-					Delivered data analysis and insights in accordance to business requirements to track model performance, support experimentation and drive decision making<br>
+					<br><b>Call Centre Call Reduction Project (CCTR)</b><br>
+					Built, deployed and monitored ML pipeline and performed system integration testing to predict and address customers' needs prior to call<br>
 					Pioneered an improved data and feature engineering pipeline architecture to standardise processing, reduce resource wastage and increase scalability, resulting in time savings of over 35 hours<br>
+					Delivered data analysis and insights to various stakeholders in accordance to business requirements to track model performance, support experimentation and drive decision making<br>
+					Performed predictive analysis with rule-based model as a real-time use case using Adobe IBMB clickstream data<br>
 
-					<br><b>Forecast Reusable Asset</b><br>
+					<br><b>Forecast Reusable Asset (FORA)</b><br>
                                         Developed forecasting methods for time series, involving EDA, processing, models and pipelines<br>
 					Launched an enterprise-wide Web UI encompassing time series forecasting methods using Dash and Plotly, and deployed it using Jenkins and OpenShift tools<br>
 
@@ -139,7 +139,7 @@
 					Engineering Systems Design: Maximising Revenue per Available Time-Based Unit<br>
 					Led a group of 4 to determine the ideal hotel rate based on occupancy rate forecast and other variables in order to maximize revenue<br>
 					Details of project is elaborated in Education and Projects > Industry Projects tab<br>
-					Applied the knowledge of SQL for data storage and processing and R extensively to clean industry data, find correlation and visualise data<br>
+					Applied the knowledge of SQL for data storage and processing and R extensively for cleaning industry data, find correlation and visualise data<br>
 					<br><br>
 
 					<f2>Campus Ambassador</f2><br>
