--- a/index.html
+++ b/index.html
@@ -80,10 +80,12 @@
 				Built, deployed and monitored ML pipeline and performed system integration testing to predict and address customers' needs prior to call<br>
 				Pioneered an improved data and feature engineering pipeline architecture to standardise processing, reduce resource wastage and increase scalability, resulting in time savings of over 35 hours<br>
 				Delivered data analysis and insights to various stakeholders in accordance to business requirements to track model performance, support experimentation and drive decision making<br>
-				Performed predictive analysis with rule-based model as a real-time use case using Adobe IBMB clickstream data<br>
+				Performed predictive analysis with rule-based model as a real-time use case using Adobe IBMB clickstream data<br>				
 				<br><b>Forecast Reusable Asset (FORA)</b><br>
 				Developed forecasting methods for time series, involving EDA, processing, models and pipelines<br>
 				Launched an enterprise-wide Web UI encompassing time series forecasting methods using Dash and Plotly, and deployed it using Jenkins and OpenShift tools<br>
+				Partnered with various BU/SUs to integrate FORA into their workstream<br>
+				Implemented best practice in project by setting up integration testing of codes<br>
 				<br><b>Feature Mart Reusable Asset</b><br>
 				Formalized and implemented Feature Mart which automates feature creation for CBG data and standardises processing required<br>
 				<br><b>Others</b><br>
