--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		</style>
 	</head>
 
-	<noembed><body></noembed>
+	<body>
 		<div class="banner">
 			<span style="display:inline-block; line-height:normal; padding-top:8px; padding-left:2%;">
 				<f1>Kay Jan</f1>&nbsp;<span style="font-size:200%;">Wong</span><br>
@@ -85,9 +85,12 @@
 				Developed forecasting methods for time series, involving EDA, processing, models and pipelines<br>
 				Launched an enterprise-wide Web UI encompassing time series forecasting methods using Dash and Plotly, and deployed it using Jenkins and OpenShift tools<br>
 				Partnered with various BU/SUs to integrate FORA into their workstream<br>
-				Implemented best practice in project by setting up integration testing of codes<br>
 				<br><b>Feature Mart Reusable Asset</b><br>
 				Formalized and implemented Feature Mart which automates feature creation for CBG data and standardises processing required<br>
+				<br><b>Other Projects</b><br>
+				Performed email clustering using different text cleaning and embedding methods and machine learning models<br>
+				Implemented best practices in multiple projects by setting up integration testing of codes<br>
+				Have experience with Kedro-style pipelines<br>
 				<br><b>Others</b><br>
 				Second most active Coursera user, based on course completion, in the company in 2018<br>
 				Represented Musicians Interest Group in DBS Dinner and Dance 2019, playing keyboard in a live band of 10 people<br>
