--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				Formalized and implemented Feature Mart which automates feature creation for CBG data and standardises processing required<br>
 				<br><b>Other Projects</b><br>
 				Performed email clustering using different text cleaning and embedding methods and machine learning models<br>
-				Implemented best practices in multiple projects by setting up integration testing of codes<br>
+				Implemented best practices workflow in multiple projects by setting up integration testing of codes<br>
 				Have experience with Kedro-style pipelines<br>
 				<br><b>Others</b><br>
 				Second most active Coursera user, based on course completion, in the company in 2018<br>
