Update work and technical skills

--- a/index.html
+++ b/index.html
@@ -78,16 +78,19 @@
 				Part of the Business Analytics Graduate Immersion Programme (BAGIP) which is a 12-month accelerated programme focused on building core analytical skills essential to business growth<br>
 				<br><b>Call Centre Call Reduction Project (CCTR)</b><br>
 				Built, deployed and monitored ML pipeline and performed system integration testing to predict and address customers' needs prior to call<br>
-				Pioneered an improved data and feature engineering pipeline architecture to standardise processing, reduce resource wastage and increase scalability, resulting in time savings of over 35 hours<br>
+				Initiated and single-handedly improved data and feature engineering pipeline architecture to standardise processing, reduce resource wastage and increase scalability, resulting in time savings of over 35 hours<br>
 				Delivered data analysis and insights to various stakeholders in accordance to business requirements to track model performance, support experimentation and drive decision making<br>
 				Performed predictive analysis with rule-based model as a real-time use case using Adobe IBMB clickstream data<br>				
 				<br><b>Forecast Reusable Asset (FORA)</b><br>
-				Developed forecasting methods for time series, involving EDA, processing, models and pipelines<br>
-				Launched an enterprise-wide Web UI encompassing time series forecasting methods using Dash and Plotly, and deployed it using Jenkins and OpenShift tools<br>
-				Partnered with various BU/SUs to integrate FORA into their workstream<br>
+				Developed forecasting methods for time series, involving EDA, processing, models and pipelines, subsequently packaged and deployed it to DBS internal server using Jenkins<br>
+				Integrate and implement forecasting and anomaly detection workflows to projects from various BU/SU across SG, HK teams<br>
+				Independently created and launched an enterprise-wide Web UI encompassing time series forecasting methods using Dash and Plotly, and deployed it using Jenkins and OpenShift<br>
+				Launched 2 forecasting e-learning courses for bank-wide staff, collaborating with Culture and Curriculum team, and have over 1000 user completions to date<br>
+				Voted top Reusable Asset (RA) in RA Learning Festival 2020<br>
 				<br><b>Feature Mart Reusable Asset</b><br>
 				Formalized and implemented Feature Mart which automates feature creation for CBG data and standardises processing required<br>
 				<br><b>Other Projects</b><br>
+				Performed multi-label classification to classify customer segments in Mortgage Pricing project<br>
 				Performed email clustering using different text cleaning and embedding methods and machine learning models<br>
 				Implemented best practices workflow in multiple projects by setting up integration testing of codes<br>
 				Have experience with Kedro-style pipelines<br>
@@ -159,18 +162,24 @@
 			<f1><b>Technical Skills</b></f1><br><br>
 			<div style="padding-left:20px">
 				<f3>Programming Languages/Tools</f3><br>
-				Pyspark, Python (Dash, Kivy, Web Scaping), R, SQL, VBA, Java, HTML, Matlab<br>
-				Cassandra, Kafka, Redis
+				Pyspark, Python (Dash, Kivy, Web Scaping), SQL (SQLite, PostgreSQL), R, Java, Go, MongoDB, Cypher<br>
+				Cassandra, Kafka, Redis, VBA, HTML, CSS, JS
 				<br><br>
-				<f3>Data Analytics Tools</f3><br>
-				AMPL, ExtendSim, Tableau, QuantumGIS, DecisionVis, Disco (Fluxicon), Knime
+				<f3>Data Science Workflow and Deployment Tools</f3><br>
+				Airflow, Kedro, MLflow, Jenkins, OpenShift
+				<br><br>
+				<f3>Data Visualization, Optimization and Simulation Tools</f3><br>
+				AMPL, ExtendSim, Tableau, QGIS, DecisionVis, Disco (Fluxicon), Knime
+				<br><br>
+				<f3>Project Management</f3><br>
+				Jira, Git, Bitbucket, Confluence
 				<br><br>
 				<f3>Microsoft Office</f3><br>
 				Microsoft Excel (Palisade, @Risk), Power Point, Visio, Word
 				<br><br>
 				<f3>Adobe Systems</f3><br>
 				Adobe Illustrator, Adobe Photoshop, Adobe Premiere Pro
-				<br><br>
+				<br><br>				
 			</div>
 		</div>
 		<br><br>
